# python-project-50

./: .gitignore  Makefile  README.md  main.yml  pyproject.toml  setup.cfg
.github/: gendiff.py
gendiff/: formats.py  generate_diff.py  parse_file.py  utils.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
hexlet-code/: parse_file.py
hexlet_code/: difference.py  formats.py  generate_diff.py  parse_arguments.py  parse_file.py  test_gendiff.py
hexlet_code/scripts/: gendiff.py
hexlet_code/tests/: test_gendiff.py
