[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Project 2 Hexlet"
authors = ["robert <Neorganizm911@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
hexlet-python-package = "hexlet_python_package.scripts.hexlet_python_package:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
